# barely

./: Cargo.toml  justfile
examples/: camera.rs  input.rs  uniform.rs  vertex_buffer.rs  window.rs
examples/shaders/: wave.wgsl
src/: lib.rs  logging.rs  prelude.rs
src/app/: builder.rs  mod.rs
src/context/: graphics.rs  mod.rs
src/event_loop/: context.rs  function_set.rs  input.rs  mod.rs
src/graphics/: camera.rs  color.rs  context.rs  handle.rs  mod.rs  utils.rs
src/graphics/buffer/: mod.rs  slice.rs  vec.rs
src/graphics/material/: default.rs  handle.rs  mod.rs  wesl.rs
src/graphics/material/shaders/: default.wgsl
src/graphics/mesh/: vertex.rs
src/windowing/: event_loop.rs
src/windowing/event_loop/: context.rs  function_set.rs
web/: index.html
